[package]
authors    =["Thor Kampefner <thorck@pm.me>"]
description="""web proofs by TEE"""
edition    ="2021"
license    ="Apache2.0 OR MIT"
name       ="web-proof-tee"
repository ="https://github.com/thor314/web-proof-tee"
version    ="0.1.0"

[dependencies]
anyhow   ="1.0"
cute = "0.3.0"
tracing = "0.1"
tracing-subscriber={ version="0.3", features=["env-filter", "fmt"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3" 
# reqwest = "0.11.24"


[dev-dependencies]
rstest    ="0.18"         # testing convenience proc-macros
env_logger="0.11"
criterion ="0.5"
arbitrary         ={ version = "1.1", features = ["derive"] } # see quickcheck
quickcheck        ="1.0"      # lowkey proptest suite
quickcheck_macros ="1" # derive 
[[bench]]
name = "bench"
harness = false
