[package]
name = "web-proof-tee" 
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
once_cell = "1.19"
rstest = "0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace]
resolver = "2"
members = [
    "client",
    "proxy"
]

# Define workspace-wide dependency versions
[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[test]]
name = "integration_tests"
path = "tests/tests.rs"
