[package]
authors     = ["Pluto developers <pluto.xyz>"]
description = """TEE client"""
edition     = "2021"
license     = "Apache2.0 OR MIT"
name        = "web-proof-tee-client"
repository  = "https://github.com/pluto/web-proof-tee"
version     = "0.1.0"

[dependencies]
anyhow             = "1.0"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio              = { version = "1", features = ["full"] }
reqwest = "0.12.9"

