[package]
authors     = ["Pluto developers <pluto.xyz>"]
description = """TEE client"""
edition     = "2021"
license     = "Apache2.0 OR MIT"
name        = "client"
repository  = "https://github.com/pluto/web-proof-tee"
version     = "0.1.0"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
anyhow = "1.0"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
