[package]
authors     = ["Pluto developers <pluto.xyz>"]
description = """TEE proxy"""
edition     = "2021"
license     = "Apache2.0 OR MIT"
name        = "proxy"
repository  = "https://github.com/pluto/web-proof-tee"
version     = "0.1.0"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tower-http = { version = "0.5", features = ["trace"] }
once_cell = "1.19"
dotenv = "0.15"
